<resources>
    <string name="app_name">CryptoApp</string>
    <string name="hello">Hello</string>
    <string name="hello_there">Hello there, login to continue.</string>
    <string name="enter_your_email">Please enter your e-mail to continue.</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="history">History</string>
    <string name="watchlist">Watchlist</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="login">Login</string>
    <string name="sign_in_login">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="logout">Logout</string>
    <string name="read_more">Read More</string>
    <string name="logout_successfully">Logout Successfully</string>
    <string name="user_not_created">User not created!</string>
    <string name="register_failed">Register Failed</string>
    <string name="otp_failed">OTP Verify Failed</string>
    <string name="please_accept_condition">Please accept terms and condition</string>
    <string name="login_failed">Login Failed</string>
    <string name="save">Save</string>
    <string name="save_profile">Save Profile</string>
    <string name="buy_now">Buy Now</string>
    <string name="sign_in_with">- Or Sign in With -</string>
    <string name="next">Next</string>
    <string name="sign_in">Sign in to your account</string>
    <string name="remember_me">Remember me</string>
    <string name="email">Enter your E-mail</string>
    <string name="email_number">Enter your E-mail / Number</string>
    <string name="code">Code</string>
    <string name="otp">Otp</string>
    <string name="email_otp">E-mail OTP :</string>
    <string name="phone_otp">Phone OTP :</string>
    <string name="submit">Submit</string>
    <string name="verify_continue">Verify &amp; Continue</string>
    <string name="password">Enter your password</string>
    <string name="subscription">Subscription</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="reset_password">Reset Password</string>
    <string name="share_this_app">Share This App</string>
    <string name="password_verify_done">Password Verify Done!</string>
    <string name="re_password_verify_done">Re Password Verify Done!</string>
    <string name="reset_password_not_completed">Reset Password not completed!</string>
    <string name="forgot_password_not_completed">Forgot Password not completed!</string>
    <string name="data_not_found">Data Not Found!</string>
    <string name="new_password">New Password</string>
    <string name="reenter_password">Confirm password</string>
    <string name="welcome_to_crypto">Welcome to crypto</string>
    <string name="accept_condition">I accept all Tearms and Conditions *</string>
    <string name="connected">Connected !!!</string>
    <string name="disconnected">DisConnected !!!</string>
    <string name="available_connection">Yes you are online internet connection is available now.</string>
    <string name="not_available_connection">Wake up your internet connection to access this part of the application.</string>
    <string name="Skip">Skip</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="phone_verification">OTP Verification</string>
    <string name="kyc_verification">KYC Verification</string>

    <string name="document_verification">Document Verification</string>
    <string name="api_key">Api Key</string>
    <string name="secret">Secret</string>
    <string name="aadhar_card_number">Aadhar card number</string>
    <string name="valid_aadhar_number">Please enter valid 12 Digit Aadhar card number</string>
    <string name="valid_pan_number">Please enter valid 10 Digit Pan card number</string>
    <string name="valid_otp">Please enter valid OTP</string>
    <string name="valid_password">Minimum eight characters, at least one uppercase letter, one lowercase letter, one number and one special character.</string>
    <string name="resend_in">Resend In :- </string>
    <string name="otp_verify_done">OTP verify done</string>
    <string name="pan_number">PAN number</string>
    <string name="passport">Passport</string>
    <string name="create_a_crypto_account">Don\'t have an account ?</string>
    <string name="privacy">T&amp;C / FAQ\'s / Privacy Policy</string>
    <string name="can_not_scan">Can\'t Scan ?</string>
    <string name="copy_the_key">Copy the key</string>
    <string name="dont_receive">Don\'t receive OTP ?</string>
    <string name="already_account">Already have an account ?</string>
    <string name="create">Create</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="forgot">Forgot</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="resend_code">Resend Code</string>
    <string name="resend">Resend</string>
    <string name="send_again">Send Again</string>
    <string name="reset">Reset</string>
    <string name="phone_number">Enter your mobile number</string>
    <string name="country_code">- -</string>
    <string name="country_code_1">Country Code</string>
    <string name="country_name">Country Name</string>
    <string name="Code">Code</string>
    <string name="phone">Phone</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_account">Sign Up</string>

    <string name="create_account">Create your Account</string>
    <string name="please_sign_up">Please sign up to continue.</string>
    <string name="upload_profile">Upload Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="valid_email">[a-zA-Z0-9._-]+@[a-z]+\.+[a-z]+</string>
    <string name="valid_error">This field is required!</string>
    <string name="email_error">E-mail field is required!</string>
    <string name="phone_error">Phone Number is required!</string>
    <string name="password_error">Password field is required!</string>
    <string name="repassword_error">Reenter Password field is required!</string>
    <string name="password_not_error">Password and Reenter Password field Not Match!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="monthly">Monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="yearly">Yearly</string>
    <string name="more_detail">More Detail</string>
    <string name="features_plans">Features / Plans</string>
    <string name="price">Price</string>
    <string name="no_of_private_str">No. of private Strategies you can create</string>
    <string name="no_of_public_str">No. of public Strategies you can create</string>
    <string name="active">Active</string>
    <string name="not_active">Not Active</string>
    <string name="qr_code_generator">QR Code Generator</string>
    <string name="change_password">Change Password</string>
    <string name="please_select_option">Please select option</string>
    <string name="pls_new_password">Please create new password to continue.</string>
    <string name="pls_enter_the_code">Please , enter the verification code we sent to your google authenticator integration app.</string>
    <string name="dummy_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is .</string>
    <string name="pl">P&amp;L</string>
    <string name="strategy_description">Strategy Description :</string>
    <string name="something_wrong">Something went wrong. Please try again.</string>
    <string name="Please_select_option">Please select option</string>
    <string name="Please_select_price">Please select price</string>
    <string name="Please_other_select_price">Please select other price</string>
    <string name="Please_other_select_coin">Please select a coin</string>
    <string name="enable_security">Enable 2FA Security</string>
    <string name="enable_biometric_security">Enable biometric devices lock on the app for 2Factor Security.</string>
    <string name="enable">Enable</string>
    <string name="login_with_biometric">Login with biometric</string>
    <string name="top_coins">Top Coins</string>
    <string name="see_all">See All</string>
    <string name="advertisement">Advertisement</string>
    <string name="top_news">Top news</string>
    <string name="authentication">Authentication</string>

</resources>
