<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modual.login.fragment.UserFragment">

    <TextView
        android:textStyle="bold"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="@string/create_personal_account"
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_margin="12dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/user_btn_email"
            android:text="@string/email"

            android:textSize="12sp"
            android:padding="4dp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/user_btn_password"
            android:text="@string/phone_number"
            android:layout_marginLeft="8dp"
            android:textSize="12sp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/user_lin_email"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/sp_et_firstName"
            android:hint="@string/first_name"
            android:textSize="18sp"
            android:padding="8dp"

            android:drawableEnd="@drawable/ic_firstname"
            android:background="@drawable/background_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/sp_et_lastName"
            android:hint="@string/last_name"
            android:textSize="18sp"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:drawableEnd="@drawable/ic_lastname"
            android:background="@drawable/background_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <EditText
            android:id="@+id/sp_et_email"
            android:hint="@string/email"
            android:textSize="18sp"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/ic_email"
            android:background="@drawable/background_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/mn_et_phone"
            android:hint="@string/phone_number"
            android:textSize="18sp"
            android:padding="8dp"
            android:inputType="number"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:drawableEnd="@drawable/ic_phone"
            android:background="@drawable/background_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/sp_et_password"
            android:hint="@string/new_password"
            android:textSize="18sp"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:drawableEnd="@drawable/ic_lock"
            android:background="@drawable/background_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/sp_et_rePassword"
            android:hint="@string/reenter_password"
            android:textSize="18sp"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:drawableEnd="@drawable/ic_re_password"
            android:background="@drawable/background_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/create_account"
        android:text="@string/create_account"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/background_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>