<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modual.login.fragment.DocumentFragment">

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textStyle="bold"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/kyc_verification"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/aadhar_card_number"
                android:hint="@string/aadhar_card_number"
                android:textSize="18dp"
                android:padding="8dp"
                android:inputType="number"
                android:maxLength="12"
                android:drawableEnd="@drawable/ic_card"
                android:background="@drawable/background_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/pan_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:maxLength="10"
                android:inputType="textCapCharacters"
                android:background="@drawable/background_edittext"
                android:drawableEnd="@drawable/ic_card"
                android:hint="@string/pan_number"
                android:padding="8dp"
                android:textSize="18dp" />


            <Button
                android:id="@+id/doc_submit"
                android:text="@string/submit"
                android:layout_margin="16dp"
                android:textColor="@color/white"
                android:background="@drawable/background_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>


    </LinearLayout>
</LinearLayout>