<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".modual.login.PasswordActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_splash"
        />
    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textStyle="bold"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/welcome_back"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/password"
                android:textSize="18dp"
                android:padding="8dp"
                android:drawableEnd="@drawable/ic_lock"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/pwd_login"
                android:text="@string/login"
                android:layout_margin="16dp"
                android:textColor="@color/white"
                android:background="@drawable/background_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/forgot_password"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:text="@string/forgot_password"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>