<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".modual.login.RegisterActivity">





    <TextView
        android:textStyle="bold"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="@string/create_personal_account"
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/user_lin_email"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/sp_et_firstName"
                android:hint="@string/first_name"
                android:textSize="18sp"
                android:padding="8dp"

                android:drawableEnd="@drawable/ic_firstname"
                android:background="@drawable/background_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/sp_et_lastName"
                android:hint="@string/last_name"
                android:textSize="18sp"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/ic_lastname"
                android:background="@drawable/background_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <EditText
                android:id="@+id/sp_et_email"
                android:hint="@string/email"
                android:textSize="18sp"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/ic_email"
                android:background="@drawable/background_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/mn_et_phone"
                android:hint="@string/phone_number"
                android:textSize="18sp"
                android:padding="8dp"
                android:inputType="number"
                android:maxLength="10"
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/ic_phone"
                android:background="@drawable/background_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/sp_et_password"
                android:hint="@string/new_password"
                android:textSize="18sp"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/ic_lock"
                android:background="@drawable/background_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/sp_et_rePassword"
                android:hint="@string/reenter_password"
                android:textSize="18sp"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/ic_re_password"
                android:background="@drawable/background_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>
    </ScrollView>
<!--    <Button-->
<!--        android:id="@+id/create_account"-->
<!--        android:text="@string/create_account"-->
<!--        android:layout_margin="16dp"-->
<!--        android:textColor="@color/white"-->
<!--        android:textAllCaps="false"-->
<!--        android:background="@drawable/background_button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"/>-->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardElevation="8dp"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/primary_color"
        app:cardCornerRadius="18dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/register_progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_toLeftOf="@+id/create_account"
                android:indeterminateTint="@color/white"
                android:visibility="visible" />

            <TextView
                android:id="@+id/create_account"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:layout_marginLeft="4dp"
                android:text="@string/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>