<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".modual.login.ResetPasswordActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_splash" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/reset_your_password"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/rp_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:drawableEnd="@drawable/ic_email"
                android:hint="@string/email"
                android:padding="8dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/rp_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edittext"
                android:drawableEnd="@drawable/ic_phone"
                android:hint="@string/password"
                android:padding="8dp"
                android:textSize="18sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/rp_et_rePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edittext"
                android:drawableEnd="@drawable/ic_phone"
                android:hint="@string/reenter_password"
                android:padding="8dp"
                android:textSize="18sp"
                android:visibility="visible" />


        </LinearLayout>

<!--        <Button-->
<!--            android:id="@+id/resent"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="16dp"-->
<!--            android:background="@drawable/background_button"-->
<!--            android:text="@string/next"-->
<!--            android:textColor="@color/white" />-->


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:cardElevation="8dp"
            android:layout_margin="12dp"
            app:cardBackgroundColor="@color/primary_color"
            app:cardCornerRadius="18dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/register_progressBar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_toLeftOf="@+id/resent"
                    android:indeterminateTint="@color/white"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/resent"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:layout_marginLeft="4dp"
                    android:text="@string/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</LinearLayout>